Added: Functionnal tokenizer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
 		"*.dep": "makefile",
 		"*.d": "makefile",
 		"Makefile.*": "makefile",
-		"cmath": "c"
+		"cmath": "c",
+		"cstdlib": "c"
 	},
 	"cSpell.words": [
 		"lrparser",
