Refactor: Rework the token flow, handle of token destruction.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,13 @@
 		"cstdlib": "c"
 	},
 	"cSpell.words": [
+		"destoy",
 		"lrparser",
 		"lrprod",
 		"lrrule",
 		"lrstack",
+		"lrtok",
+		"lrtoks",
 		"popn"
 	]
 }
