--- a/Makefile.vars
+++ b/Makefile.vars
@@ -22,11 +22,12 @@ CWARN := all extra
 CWARN := $(CWARN:%=-W%)
 
 CFLAGS := -MMD $(CWARN) $(if $(OPTIMIZE),-O3,) $(if $(DEBUG),-g,) \
-	$(if $(DEBUG),-DDEBUG,) $(CMOREFLAGS)
+	$(if $(DEBUG),-DDEBUG,) $(CMOREFLAGS) \
+	-DMP_TOKEN_TYPE="union __u {char *word; int io_type;}"
 
 # Linker
 
-LD := gcc
+LD := cc
 
 LDFLAGS := $(LDMOREFLAGS)
 LD_LIBS :=
