Added: Action/goto table written (need a lexer that support logic subshell and pipe parsing to check) Fix: small fixies in pdfs.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/bin/minishell",
-			"args": ["wc -l > bddd c"],
+			"args": ["<a >b test -l > c ffdsfsd >fdsfds"],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
