--- a/Makefile.vars
+++ b/Makefile.vars
@@ -23,14 +23,14 @@ CWARN := $(CWARN:%=-W%)
 
 CFLAGS := -MMD $(CWARN) $(if $(OPTIMIZE),-O3,) $(if $(DEBUG),-g,) \
 	$(if $(DEBUG),-DDEBUG,) $(CMOREFLAGS) \
-	-DMP_TOKEN_TYPE="union __u {char *word; int io_type;}"
+	-DMP_TOKEN_TYPE="union __u {char *word; int io_type; int logic_type;}"
 
 # Linker
 
 LD := cc
 
 LDFLAGS := $(LDMOREFLAGS)
-LD_LIBS :=
+LD_LIBS := -lreadline
 
 # ---
 # Library dependencies
