Added: AST generation Fix: Some fixies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 	"cSpell.words": [
 		"boud",
 		"CBRACKET",
+		"commandp",
 		"destoy",
 		"doublequote",
 		"lrparser",
@@ -20,6 +21,7 @@
 		"lrtok",
 		"lrtoks",
 		"OBRACKET",
-		"popn"
+		"popn",
+		"subshell"
 	]
 }
