--- a/Makefile.vars
+++ b/Makefile.vars
@@ -38,7 +38,7 @@ LD_LIBS := -lreadline
 
 THIRDPARTY := thirdparty
 
-LIBS := microparser
+LIBS := microparser libft-full
 
 LIBS_MAKE_RULE :=
 LIBS_CLEAN_RULE :=
