--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,16 @@
 		"Makefile.*": "makefile",
 		"cmath": "c",
 		"cstdlib": "c",
-		"sstream": "c"
+		"sstream": "c",
+		"optional": "c",
+		"istream": "c",
+		"ostream": "c",
+		"system_error": "c",
+		"array": "c",
+		"functional": "c",
+		"tuple": "c",
+		"type_traits": "c",
+		"utility": "c"
 	},
 	"cSpell.words": [
 		"boud",
