Fix: `src/core/exec/exec_exec.c` is now norminette friendly. TODO: Split `src/core/exec/exec_exec.c` into mutiple files, too many functions in this file. TODO: Implement builtins.

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -18,7 +18,7 @@ RM := rm
 
 CC := gcc
 
-CWARN := all extra
+CWARN := all extra error
 CWARN := $(CWARN:%=-W%)
 
 CFLAGS := -MMD $(CWARN) $(if $(OPTIMIZE),-O3,) $(if $(DEBUG),-g,) \
