Fix: Removed wildcard.

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -70,8 +70,35 @@ INCDIR := include
 
 CFLAGS += -I$(INCDIR)
 
-SRCS := $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/**/*.c) \
-	$(wildcard $(SRCDIR)/**/**/*.c) $(wildcard $(SRCDIR)/**/**/**/*.c)
+SRCS := src/tokenizer/generator/bracket.c src/tokenizer/generator/free_cb.c  \
+src/tokenizer/generator/word_io_and_or_pipe_end.c  \
+src/tokenizer/token_gen_table.c src/tokenizer/lr_token_list.c  \
+src/tokenizer/tokenize.c src/tokenizer/tokenizer_initial.c  \
+src/tokenizer/tokenizer_dollar.c src/tokenizer/tokenizer_word.c  \
+src/tokenizer/tokenizer_helpers.c src/tokenizer/tokenizer_wildcard.c  \
+src/tokenizer/tokenizer_io_pipe_and_or.c src/utils/dyn_str.c  \
+src/utils/ft_count_if.c src/parser/ast/io_info.c  \
+src/parser/ast/args_redirect_list.c src/parser/ast/arg_red.c  \
+src/parser/ast/subshell.c src/parser/ast/and_or.c src/parser/ast/command_line.c  \
+src/parser/ast/command.c src/parser/ast/args.c src/parser/ast/pipeline.c  \
+src/parser/ast/redirect_list.c src/parser/ast/simple_command.c  \
+src/parser/prod/prod_sc.c src/parser/prod/prod_sc_free.c  \
+src/parser/prod/prod_command.c src/parser/prod/prod_command_free.c  \
+src/parser/prod/prod_pipeline.c src/parser/prod/prod_subshell.c  \
+src/parser/prod/prod_io_pn.c src/parser/prod/prod_arl.c  \
+src/parser/prod/prod_rl.c src/parser/prod/prod_arg_red.c  \
+src/parser/prod/prod_and_or.c src/parser/table.c  \
+src/core/exec/builtins/builtin_cd.c src/core/exec/builtins/builtin_unset.c  \
+src/core/exec/builtins/builtin_echo.c src/core/exec/builtins/builtin_env.c  \
+src/core/exec/builtins/builtin_exit.c src/core/exec/builtins/builtin_export.c  \
+src/core/exec/builtins/builtin_pwd.c src/core/exec/builtins/builtins_data.c  \
+src/core/exec/cleanup.c src/core/exec/_utils.c src/core/exec/and_or_executor.c  \
+src/core/exec/command_launcher.c src/core/exec/command_runner.c  \
+src/core/exec/command_token_executor.c src/core/exec/exec_exec.c  \
+src/core/exec/pipeline_executor.c src/core/exec/exec_sig_handler.c  \
+src/core/exec/redirections.c src/core/exec/exec_loop.c src/core/exec/init.c  \
+src/core/env/destroy.c src/core/env/get.c src/core/env/helper.c  \
+src/core/env/init.c src/core/env/set.c src/main.c src/utils.c
 OBJS := $(SRCS:$(SRCDIR)/%.c=$(OBJDIR)/%.c.o)
 DEPS := $(OBJS:%.c.o=%.c.d)
 
