--- a/Makefile.vars
+++ b/Makefile.vars
@@ -92,14 +92,14 @@ src/core/exec/builtins/builtin_cd.c src/core/exec/builtins/builtin_unset.c  \
 src/core/exec/builtins/builtin_echo.c src/core/exec/builtins/builtin_env.c  \
 src/core/exec/builtins/builtin_exit.c src/core/exec/builtins/builtin_export.c  \
 src/core/exec/builtins/builtin_pwd.c src/core/exec/builtins/builtins_data.c  \
-src/core/exec/cleanup.c src/core/exec/_utils.c src/core/exec/and_or_executor.c  \
-src/core/exec/command_launcher.c src/core/exec/command_runner.c  \
-src/core/exec/command_token_executor.c src/core/exec/create_heredoc.c  \
-src/core/exec/exec_exec.c src/core/exec/pipeline_executor.c  \
-src/core/exec/exec_sig_handler.c src/core/exec/redirections.c  \
-src/core/exec/exec_loop.c src/core/exec/init.c src/core/env/destroy.c  \
-src/core/env/get.c src/core/env/helper.c src/core/env/init.c src/core/env/set.c  \
-src/main.c src/utils.c
+src/core/exec/cleanup.c src/core/exec/_utils1.c src/core/exec/_utils2.c  \
+src/core/exec/and_or_executor.c src/core/exec/command_launcher.c  \
+src/core/exec/command_runner.c src/core/exec/command_token_executor.c  \
+src/core/exec/create_heredoc.c src/core/exec/exec_exec.c  \
+src/core/exec/pipeline_executor.c src/core/exec/exec_sig_handler.c  \
+src/core/exec/redirections.c src/core/exec/exec_loop.c src/core/exec/init.c  \
+src/core/env/destroy.c src/core/env/get.c src/core/env/helper.c  \
+src/core/env/init.c src/core/env/set.c src/main.c src/utils.c
 OBJS := $(SRCS:$(SRCDIR)/%.c=$(OBJDIR)/%.c.o)
 DEPS := $(OBJS:%.c.o=%.c.d)
 
