--- a/Makefile.vars
+++ b/Makefile.vars
@@ -9,6 +9,7 @@ include Makefile.cfg
 
 MKDIR := mkdir
 RM := rm
+ECHO := /usr/bin/echo
 
 # ---
 # Build variables
@@ -97,10 +98,10 @@ src/core/exec/and_or_executor.c src/core/exec/command_launcher.c  \
 src/core/exec/command_runner.c src/core/exec/command_token_executor.c  \
 src/core/exec/create_heredoc.c src/core/exec/exec.c  \
 src/core/exec/pipeline_executor.c src/core/exec/sig_handler.c  \
-src/core/exec/redirections.c src/core/exec/loop.c src/core/exec/init.c  \
-src/core/env/destroy.c src/core/env/get.c src/core/env/helper.c  \
-src/core/env/init.c src/core/env/set.c src/main.c src/utils.c \
-src/core/exec/heredoc_sig_handler.c src/core/env/restore_termios.c
+src/core/exec/redirections.c src/core/exec/prompt.c src/core/exec/loop.c  \
+src/core/exec/init.c src/core/env/destroy.c src/core/env/get.c  \
+src/core/env/helper.c src/core/env/init.c src/core/env/set.c src/main.c  \
+src/utils.c src/core/exec/heredoc_sig_handler.c src/core/env/restore_termios.c
 OBJS := $(SRCS:$(SRCDIR)/%.c=$(OBJDIR)/%.c.o)
 DEPS := $(OBJS:%.c.o=%.c.d)
 
