Added: minishell Docker builder and container, make Docker utils

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -12,6 +12,15 @@ RM := rm
 ECHO := /usr/bin/echo
 
 # ---
+# Docker variable
+# ---
+
+IMAGE_NAME := minishell
+CONTAINER_NAME := minishell_container
+DOCKERFILE := Dockerfile
+DOCKER_BUILD_CONTEXT := .
+
+# ---
 # Build variables
 # ---
 
